# poc-rust-arch

./: Cargo.toml  readme.md
src/: alarm.rs  can.rs  controller.rs  device.rs  heater.rs  main.rs  shared.rs  shutdown.rs  traits.rs  utils.rs  webserver.rs
