[package]
name = "poc-rust-arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net"]}
async-std = "1.12"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"

futures = "0.3"
futures-util = "0.3"

chrono = "0.4"